# participation

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  np_performance_test_1.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  python-app.yml
concept/: index.html
de/: index.html
de/concept/: index.html
de/mesa_docs/: index.html
de/teaser/: index.html
de/technical/approval_voting/: index.html
de/technical/preference_relations/: index.html
democracy_sim/: app.py  distance_functions.py  model_setup.py  participation_agent.py  participation_model.py  run.py  social_welfare_functions.py  visualisation_elements.py
docs/: concept.md  index.md  mesa_docs.md  teaser.md
docs/assets/stylesheets/: custom.7c86dd97.min.css
docs/de/: mesa_docs.md  teaser.md
docs/overrides/: home.html  main.html
docs/technical/: approval_voting.md  preference_relations.md
mesa_docs/: index.html
search/: search_index.json
teaser/: index.html
technical/approval_voting/: index.html
technical/preference_relations/: index.html
tests/: LICENSE  test_approval_voting.py  test_cell_space.py  test_distance_functions.py  test_import_namespace.py  test_majority_rule.py  test_participation_agent.py  test_participation_area_agent.py  test_participation_model.py  test_participation_voting_agent.py  test_pers_dist.py  test_social_welfare_functions.py
