[tool.poetry]
name = "participation"
description = "Agent-based modeling (ABM) in Python"
requires-python = ">=3.10"
keywords = [
  "ABM",
  "simulation",
  "multi-agent",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Mesa = "^2.3.0"
numpy = "^1.26.4"
solara = "^1.32.1"
matplotlib = "^3.9.0"
ipyvuetify = "^1.9.4"
seaborn = "^0.13.2"
click = "^8.1.7"
networkx = "^3.3"
pandas = "^2.2.2"
pytest = "^8.2.0"
toml = "^0.10.2"
Flask = "^3.0.3"
altair = "^5.3.0"
streamlit = "^1.34.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
  "pytest >= 4.6",
  "pytest-cov",
  "pytest-mock",
]
docs = [
  "mkdocs",
  "mkdocs-material",
]

[project.urls]
homepage = "https://github.com/jurikane/participation"
repository = "https://github.com/jurikane/participation"
